opam-version: "2.0"
authors: ["Simon Cruanes" "Guillaume Bury"]
maintainer: "simon.cruanes.2007@m4x.org"
version: "0.5"
synopsis: "Printbox unicode handling"
description: """
Adds unicode handling to the printbox package.
Printbox allows to print nested boxes, lists, arrays, tables in several formats
"""
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "printbox" {= version}
  "uutf"
  "uucp"
]
tags: [ "print" "box" "table" "tree" ]
homepage: "https://github.com/c-cube/printbox/"
dev-repo: "git+https://github.com/c-cube/printbox.git"
bug-reports: "https://github.com/c-cube/printbox/issues/"
