opam-version: "1.2"
name: "printbox"
version: "0.1"
authors: ["Simon Cruanes" "Guillaume Bury"]
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["jbuilder" "build"]
]
build-doc: [
  ["jbuilder" "build" "@doc"]
]
depends: [
  "jbuilder" {build}
  "base-bytes"
  "odoc" {doc}
]
depopts: [
  "tyxml"
]
tags: [ "print" "box" "table" "tree" ]
homepage: "https://github.com/c-cube/printbox/"
dev-repo: "https://github.com/c-cube/printbox.git"
bug-reports: "https://github.com/c-cube/printbox/issues/"

