opam-version: "2.0"
name: "printbox"
version: "0.1"
authors: ["Simon Cruanes" "Guillaume Bury"]
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "Allows to print nested boxes, lists, arrays, tables in several formats"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" {build}
  "base-bytes"
  "odoc" {with-doc}
]
depopts: [
  "tyxml"
]
tags: [ "print" "box" "table" "tree" ]
homepage: "https://github.com/c-cube/printbox/"
dev-repo: "git+https://github.com/c-cube/printbox.git"
bug-reports: "https://github.com/c-cube/printbox/issues/"
