opam-version: "2.0"
authors: ["Simon Cruanes" "Guillaume Bury"]
maintainer: "simon.cruanes.2007@m4x.org"
version: "0.4"
synopsis: "Allows to print nested boxes, lists, arrays, tables in several formats"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" { >= "1.1" }
  "base-bytes"
  "odoc" {with-doc}
  "ocaml" { >= "4.03" }
  "uutf" {with-test}
  "uucp" {with-test}
]
depopts: [
  "tyxml"
  "uutf"
  "uucp"
]
tags: [ "print" "box" "table" "tree" ]
homepage: "https://github.com/c-cube/printbox/"
dev-repo: "git+https://github.com/c-cube/printbox.git"
bug-reports: "https://github.com/c-cube/printbox/issues/"
