(env
 (_
  (flags :standard -warn-error -a)))

(test
 (name test_ann_0_3)
 (modules test_ann_0_3)
 (package printbox-text)
 (libraries printbox printbox-text))

(test
 (name test1)
 (modules test1)
 (package printbox-text)
 (libraries printbox printbox-text))

(test
 (name test_blending)
 (modules test_blending)
 (package printbox-text)
 (libraries printbox printbox-text))

(test
 (name test_html)
 (modules test_html)
 (package printbox-html)
 (libraries printbox printbox-html))

(test
 (name test_md)
 (modules test_md)
 (package printbox-md)
 (libraries printbox printbox-md))

(rule
 (alias runtest)
 (deps test_md.expected)
 (targets test_md.expected.md)
 (mode promote)
 (action
  (copy %{deps} %{targets})))
